error
0-bubble_sort.c: In function ‘bubble_sort’:
0-bubble_sort.c:26:62: error: passing argument 3 of ‘swap’ makes integer from pointer without a cast [-Werror=int-conversion]
   26 |                                 swap(array[j], array[j + 1], array, size);
      |                                                              ^~~~~
      |                                                              |
      |                                                              int *
In file included from 0-bubble_sort.c:2:
sort.h:22:38: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘int *’
   22 | void swap(size_t a, size_t b, size_t size, int *array);
      |                               ~~~~~~~^~~~
0-bubble_sort.c:26:69: error: passing argument 4 of ‘swap’ makes pointer from integer without a cast [-Werror=int-conversion]
   26 |                                 swap(array[j], array[j + 1], array, size);
      |                                                                     ^~~~
      |                                                                     |
      |                                                                     size_t {aka long unsigned int}
In file included from 0-bubble_sort.c:2:
sort.h:22:49: note: expected ‘int *’ but argument is of type ‘size_t’ {aka ‘long unsigned int’}
   22 | void swap(size_t a, size_t b, size_t size, int *array);
      |                                            ~~~~~^~~~~
0-bubble_sort.c:17:16: error: unused variable ‘temp’ [-Werror=unused-variable]
   17 |         size_t temp;
      |                ^~~~
0-bubble_sort.c: At top level:
0-bubble_sort.c:32:6: error: conflicting types for ‘swap’; have ‘void(size_t,  size_t,  int **, size_t)’ {aka ‘void(long unsigned int,  long unsigned int,  int **, long unsigned int)’}
   32 | void swap(size_t a, size_t b, int **arry, size_t size)
      |      ^~~~
In file included from 0-bubble_sort.c:2:
sort.h:22:6: note: previous declaration of ‘swap’ with type ‘void(size_t,  size_t,  size_t,  int *)’ {aka ‘void(long unsigned int,  long unsigned int,  long unsigned int,  int *)’}
   22 | void swap(size_t a, size_t b, size_t size, int *array);
      |      ^~~~
0-bubble_sort.c: In function ‘swap’:
0-bubble_sort.c:39:14: error: ‘i’ undeclared (first use in this function)
   39 |         for (i = 0; i < size; i++)
      |              ^
0-bubble_sort.c:39:14: note: each undeclared identifier is reported only once for each function it appears in
0-bubble_sort.c:41:17: error: implicit declaration of function ‘print’; did you mean ‘printf’? [-Werror=implicit-function-declaration]
   41 |                 print("%d, ", array[i]);
      |                 ^~~~~
      |                 printf
0-bubble_sort.c:41:31: error: ‘array’ undeclared (first use in this function); did you mean ‘arry’?
   41 |                 print("%d, ", array[i]);
      |                               ^~~~~
      |                               arry
0-bubble_sort.c:32:37: error: unused parameter ‘arry’ [-Werror=unused-parameter]
   32 | void swap(size_t a, size_t b, int **arry, size_t size)
      |                               ~~~~~~^~~~
cc1: all warnings being treated as errors
